Bug 443344 attachment filename corruption imported from Eudora (Japanese version). p=Hiroyuki Ikezoe <poincare@ikezoe.net>,r=beckley,sr=bienvenu